force-app/main/default/objects/Rewards__c/Rewards__c.object-meta.xml
<CustomObject>
    <description>Customer incentives and rewards.</description>
    <label>Reward</label>
    <nameField>
        <label>Reward Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rewards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>