force-app/main/default/objects/Rewards__c/fields/Applies_to_All_Plans__c.field-meta.xml
<CustomField>
    <fullName>Applies_to_All_Plans__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This reward/program applies to every plan/rate listed by this REP Profile on TrueCost</description>
    <inlineHelpText>This reward/program applies to every plan/rate listed by this REP Profile on TrueCost</inlineHelpText>
    <label>Applies to All Plans</label>
    <type>Checkbox</type>
</CustomField>