force-app/main/default/objects/Rewards__c/fields/Choice__c.field-meta.xml
<CustomField>
    <fullName>Choice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if this reward is a customer choice, and is part of a larger program.</description>
    <inlineHelpText>Check this box if this reward is a customer choice, and is part of a larger program.</inlineHelpText>
    <label>Choice</label>
    <type>Checkbox</type>
</CustomField>