force-app/main/default/objects/Rewards__c/fields/New_Customer_Only__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the reward/incentive is only available for NEW customers.</description>
    <inlineHelpText>Check this box if the reward/incentive is only available for NEW customers.</inlineHelpText>
    <label>New Customer Only</label>
    <type>Checkbox</type>
</CustomField>