force-app/main/default/objects/Rewards__c/fields/Percentage_Value__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Value__c</fullName>
    <description>What percentage cash-back is offered by this reward?  Only required for % Cash Back reward type.</description>
    <inlineHelpText>What percentage cash-back is offered by this reward?  Only required for % Cash Back reward type.</inlineHelpText>
    <label>% Value</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>