force-app/main/default/objects/Rewards__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if this reward is a Program type offer where you will assign multiple choices that a customer will have for selecting rewards or incentives.</description>
    <inlineHelpText>Check this box if this reward is a Program type offer where you will assign multiple choices that a customer will have for selecting rewards or incentives.</inlineHelpText>
    <label>Program</label>
    <type>Checkbox</type>
</CustomField>