force-app/main/default/objects/Rewards__c/fields/REP_Profile__c.field-meta.xml
<CustomField>
    <fullName>REP_Profile__c</fullName>
    <description>The REP that offers this reward or incentive.</description>
    <inlineHelpText>The REP that offers this reward or incentive.</inlineHelpText>
    <label>REP Profile</label>
    <referenceTo>REP_Profile__c</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>Rewards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>