force-app/main/default/objects/Rewards__c/fields/Reward_Description__c.field-meta.xml
<CustomField>
    <fullName>Reward_Description__c</fullName>
    <description>List any details for the reward or incentive here.</description>
    <inlineHelpText>List any details for the reward or incentive here.</inlineHelpText>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>