force-app/main/default/objects/Rewards__c/fields/Reward_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Reward_End_Date__c</fullName>
    <description>When does this offer become unavailable?</description>
    <inlineHelpText>When does this offer become unavailable?</inlineHelpText>
    <label>Reward End Date</label>
    <type>Date</type>
</CustomField>