force-app/main/default/objects/Rewards__c/fields/Reward_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Reward_Product_ID__c</fullName>
    <description>For API purposes.</description>
    <inlineHelpText>For API purposes.</inlineHelpText>
    <label>Reward Product ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>