force-app/main/default/objects/Rewards__c/fields/Reward_Program__c.field-meta.xml
<CustomField>
    <fullName>Reward_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What program is this reward choice a part of?  Please create reward programs before creating choices.</description>
    <inlineHelpText>What program is this reward choice a part of?  Please create reward programs before creating choices.</inlineHelpText>
    <label>Reward Program</label>
    <referenceTo>Rewards__c</referenceTo>
    <relationshipLabel>Reward Program Choices</relationshipLabel>
    <relationshipName>Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>