force-app/main/default/objects/Rewards__c/fields/Reward_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Reward_Start_Date__c</fullName>
    <description>What is the soonest date that this offer is available?</description>
    <inlineHelpText>What is the soonest date that this offer is available?</inlineHelpText>
    <label>Reward Start Date</label>
    <type>Date</type>
</CustomField>