force-app/main/default/objects/Rewards__c/fields/Reward_Type__c.field-meta.xml
<CustomField>
    <fullName>Reward_Type__c</fullName>
    <description>What kind of reward option is this? If this is a reward program, select &quot;Reward Program.&quot;</description>
    <inlineHelpText>What kind of reward option is this? If this is a reward program, select &quot;Reward Program.&quot;</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airline Miles</fullName>
            </value>
            <value>
                <fullName>Bill Credit</fullName>
            </value>
            <value>
                <fullName>Cash Back (% of bill)</fullName>
            </value>
            <value>
                <fullName>Cash Back (flat $ amount)</fullName>
            </value>
            <value>
                <fullName>Charitable Donation</fullName>
            </value>
            <value>
                <fullName>Credit Card Points</fullName>
            </value>
            <value>
                <fullName>Electronics/Home Devices</fullName>
            </value>
            <value>
                <fullName>Home Protection</fullName>
            </value>
            <value>
                <fullName>Hotel Points</fullName>
            </value>
            <value>
                <fullName>Retail Items</fullName>
            </value>
            <value>
                <fullName>Reward Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>