force-app/main/default/objects/Rewards__c/fields/Reward_Value__c.field-meta.xml
<CustomField>
    <fullName>Reward_Value__c</fullName>
    <description>What is the $ value of this reward or incentive?  This does not apply to Airline Miles or Hotel Points.</description>
    <inlineHelpText>What is the $ value of this reward or incentive?  This does not apply to Airline Miles or Hotel Points.</inlineHelpText>
    <label>$ Value</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>