force-app/main/default/objects/Rewards__c/fields/Time_from_start_of_contract_in_months__c.field-meta.xml
<CustomField>
    <fullName>Time_from_start_of_contract_in_months__c</fullName>
    <description>How many months from when the contract starts is the customer able to receive this reward or incentive?</description>
    <inlineHelpText>How many months from when the contract starts is the customer able to receive this reward or incentive?</inlineHelpText>
    <label>Time from start of contract (in months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>