force-app/main/default/objects/Rewards__c/validationRules/Choice_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Choice_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>and(Choice__c =true,  ISPICKVAL(Reward_Type__c , &quot;Reward Program&quot;))</errorConditionFormula>
    <errorDisplayField>Reward_Type__c</errorDisplayField>
    <errorMessage>Reward05: If this reward is a Choice, the Type cannot be &quot;Reward Program.&quot;</errorMessage>
</ValidationRule>