force-app/main/default/objects/Rewards__c/validationRules/Program_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Program__c =TRUE, OR( NOT(ISPICKVAL( Reward_Type__c ,&quot;Reward Program&quot;)), Reward_Value__c &gt;0, Percentage_Value__c &gt;0))</errorConditionFormula>
    <errorMessage>Reward06: When creating a Reward Program, please leave all Value fields blank and set the &quot;Type&quot; to Reward Program.</errorMessage>
</ValidationRule>