force-app/main/default/objects/Rewards__c/validationRules/Reward_Choice_OR_Program.validationRule-meta.xml
<ValidationRule>
    <fullName>Reward_Choice_OR_Program</fullName>
    <active>true</active>
    <errorConditionFormula>and( Program__c =true,Choice__c=true)</errorConditionFormula>
    <errorMessage>Reward07: Reward can be a Program OR a Choice, not both.</errorMessage>
</ValidationRule>