force-app/main/default/objects/Rewards__c/validationRules/Reward_StartEnd_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Reward_StartEnd_Date</fullName>
    <active>true</active>
    <description>Start Date &lt; End Date</description>
    <errorConditionFormula>Reward_Start_Date__c  &gt;  Reward_End_Date__c</errorConditionFormula>
    <errorMessage>Reward02: Reward end date must be after the reward start date.</errorMessage>
</ValidationRule>