force-app/main/default/objects/Rewards__c/validationRules/Reward_StartEnd_Date2.validationRule-meta.xml
<ValidationRule>
    <fullName>Reward_StartEnd_Date2</fullName>
    <active>true</active>
    <description>If there is a start or end date, there must be an end or start date to go with it.</description>
    <errorConditionFormula>OR(AND(ISNULL( Reward_Start_Date__c ) , NOT(ISNULL(Reward_End_Date__c))), AND(ISNULL( Reward_End_Date__c ) , NOT(ISNULL(Reward_Start_Date__c))))</errorConditionFormula>
    <errorMessage>Reward03: If you have a reward start or end date, please also enter a date for the other.</errorMessage>
</ValidationRule>