force-app/main/default/objects/Rewards__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>REP_Profile__c</columns>
    <columns>Reward_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>